--- a/_notebooks/2020-10-19-AuctionTheoryArticle.ipynb
+++ b/_notebooks/2020-10-19-AuctionTheoryArticle.ipynb
@@ -4,28 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Auction Theory - A New Perspective\n",
+    "# How Auctions Shape the Future\n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
     "- comments: true\n",
     "- author: Timothy Cassel\n",
-    "- categories: [Microeconomic Theory]\n",
-    "- image: images/Auction_temp.jpg"
+    "- categories: []\n",
+    "- image: images/Auction_Pic.png"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 2020 Nobel Prize in Economics was awarded to Paul R. Milgrom abd Robert B. Wilson \"for imporvements to auction theroy and invetions of new auction formats\". <br> As a current student of Economics taking a course in advanced microeconomics, this work intrigued me. Moreover, I have dedicated some of my free time to reading a book by Shoshanna Zuboff titled \"The Age of Surveillance Capitalism\", wherein Chapter 3 she discusses how Google revolutionzed their online advertising by appealing to an ad auction system, devised by lead Economist Hal Varian. "
+    "The 2020 Nobel Prize in Economics was awarded to Paul R. Milgrom and Robert B. Wilson \"for improvements to auction theory and inventions of new auction formats\". <br> As a current student of Economics taking a course in advanced microeconomics, this work intrigued me. Moreover, I have dedicated some of my free time to reading a book by Shoshanna Zuboff titled \"The Age of Surveillance Capitalism\", wherein Chapter 3 she discusses how Google revolutionzed their online advertising by initiating an ad auction system called AdWorks, intially devised by lead Economist of Google Hal Varian. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following article, I will provide an overview on the state of the art in auction theory and discuss how Google uses auctions to drive their advertising campaigns."
+    "In the following article, I will first provide a basic overview of auction theory and second, discuss Google and how it uses auctions to drive their advertising campaigns."
    ]
   },
   {
