--- a/_notebooks/2020-10-19-AuctionTheoryArticle.ipynb
+++ b/_notebooks/2020-10-19-AuctionTheoryArticle.ipynb
@@ -11,7 +11,7 @@
     "- comments: true\n",
     "- author: Timothy Cassel\n",
     "- categories: []\n",
-    "- image: images/Auction_Pic.png"
+    "- image: images/Auctions_Pic.png"
    ]
   },
   {
